# elastic-irc-bot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  elastic_search.c  elastic_search.h  elasticsearch.c  elasticsearch.h  irc_lexer.c  irc_lexer.h  irc_logger.c  irc_logger.h  irc_message.c  irc_message.h  irc_message_parser.c  irc_message_parser.h  irc_spec.h  irc_token.c  irc_token.h  main.c  message_bus.c  message_bus.h  settings.h  str_helpers.c  str_helpers.h
lib/: .gitignore
test/: escape_str.c  irc_command_parsing_test.c  main.c  str_helpers_test.c
